# flashbox

./: .env_example  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: dfff995244cd_creation_of_flashcards_flashcard_stacks_.py
src/: app.py
src/core/schemas/: flashcard_schemas.py  flashcard_stack_schemas.py
src/core/services/: flashcard_service.py  flashcard_stack_service.py  user_service.py
src/database/models/: __init__.py  flashcard.py  flashcard_stack.py
src/database/repositories/: flashcard_repository.py  flashcard_stack_repository.py  user_repository.py
src/di/: container.py  dependencies.py  providers.py
src/routes/: __init__.py  flashcard_routes.py  flashcard_stack_routes.py
src/utils/: settings.py
