[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Guedes",email = "gabrielguedesbsilva@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "psycopg[binary] (>=3.2.5,<4.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"
ruff = "^0.9.9"
factory-boy = "^3.3.3"
testcontainers = "^4.9.2"
freezegun = "^1.5.1"
dependency-injector = "^4.46.0"
loguru = "^0.7.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['E402'] 

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint.pylint]
max-args = 10

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'python src/app.py'
pre_test = 'task lint'
test = 'pytest -x --cov=src -vv --showlocals --tb=long'
post_test = 'coverage html'
